src/objects/Bypass_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>To Manage Bypass Settings for Trigger and Validation Rule</description>
    <fields>
        <fullName>Disable_Integration_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this flag to prevent integration requests being generated</description>
        <inlineHelpText>Set this flag to prevent integration requests being generated</inlineHelpText>
        <label>Disable_Integration_Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Triggers__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Custom field to bypass logic for trigger.</description>
        <label>Disable_Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disbale Validation Rules.</description>
        <label>Disable_Validation_Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Workflow_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable_Workflow_Rules</description>
        <label>Disable_Workflow_Rules</label>
        <type>Checkbox</type>
    </fields>
    <label>Bypass Settings</label>
</CustomObject>